--- a/playbooks/groups/sundries.yml
+++ b/playbooks/groups/sundries.yml
@@ -29,7 +29,7 @@
   - role: easyfix/gather
     when: master_sundries_node|bool
   - role: regindexer/build
-    when: master_sundries_node|bool
+    when: master_sundries_node|bool and env != "staging"
   - role: bz_review_report
     when: master_sundries_node|bool and env != "staging"
   - rsyncd
@@ -69,6 +69,11 @@
     mnt_dir: '/srv/web/review-stats'
     nfs_src_dir: 'openshift_{{ env_short }}_reviewstats'
     mount_stg: true
+  - role: nfs/client
+    mnt_dir: '/srv/web/registry-index'
+    nfs_src_dir: '/flatpak-indexer-storage{{ env_short }}'
+    mount_stg: true
+
 
   pre_tasks:
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
