--- a/playbooks/groups/sundries.yml
+++ b/playbooks/groups/sundries.yml
@@ -29,7 +29,7 @@
   - role: easyfix/gather
     when: master_sundries_node|bool
   - role: regindexer/build
-    when: master_sundries_node|bool and env != "staging"
+    when: master_sundries_node|bool
   - role: bz_review_report
     when: master_sundries_node|bool and env != "staging"
   - rsyncd
