--- a/roles/openshift-apps/flatpak-indexer/templates/configmap.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/configmap.yml
@@ -40,23 +40,25 @@ data:
             extract_icons: True
             delta_keep_days: 30
             flatpak_annotations: True
-        latest-amd64:
-            output: ${OUTPUT_DIR}/fedora/flatpak-latest-amd64.json
+{% for architecture in [ 'amd64', 'arm64' ] %}
+        latest-{{ architecture }}:
+            output: ${OUTPUT_DIR}/fedora/flatpak-latest-{{ architecture }}.json
             registry: fedora
-            architecture: amd64
+            architecture: {{ architecture }}
             tag: latest
             bodhi_status: stable
             extract_icons: True
             delta_keep_days: 30
-        latest-amd64-annotations:
-            output: ${OUTPUT_DIR}/fedora/flatpak-latest-amd64-annotations.json
+        latest-{{ architecture }}-annotations:
+            output: ${OUTPUT_DIR}/fedora/flatpak-latest-{{ architecture }}-annotations.json
             registry: fedora
-            architecture: amd64
+            architecture: {{ architecture }}
             tag: latest
             bodhi_status: stable
             extract_icons: True
             delta_keep_days: 30
             flatpak_annotations: True
+{% endfor %}
         testing:
             output: ${OUTPUT_DIR}/fedora/flatpak-testing.json
             registry: fedora
@@ -70,21 +72,23 @@ data:
             bodhi_status: testing
             extract_icons: True
             flatpak_annotations: True
-        testing-amd64:
-            output: ${OUTPUT_DIR}/fedora/flatpak-testing-amd64.json
+{% for architecture in [ 'amd64', 'arm64' ] %}
+        testing-{{ architecture }}:
+            output: ${OUTPUT_DIR}/fedora/flatpak-testing-{{ architecture }}.json
             registry: fedora
-            architecture: amd64
+            architecture: {{ architecture }}
             tag: testing
             bodhi_status: testing
             extract_icons: True
-        testing-amd64-annotations:
-            output: ${OUTPUT_DIR}/fedora/flatpak-testing-amd64-annotations.json
+        testing-{{ architecture }}-annotations:
+            output: ${OUTPUT_DIR}/fedora/flatpak-testing-{{ architecture }}-annotations.json
             registry: fedora
-            architecture: amd64
+            architecture: {{ architecture }}
             tag: testing
             bodhi_status: testing
             extract_icons: True
             flatpak_annotations: True
+{% endfor %}
 ---
 kind: ConfigMap
 apiVersion: v1
