reversepassproxy.registry-generic.conf: sync staging Flatpak index names
In the regindexer => flatpak-indexer move, the index names for the 'latest'
tag were renamed from flatpak.json to flatpak-latest.json (and so forth.)

--- a/roles/httpd/reverseproxy/templates/reversepassproxy.registry-generic.conf
+++ b/roles/httpd/reverseproxy/templates/reversepassproxy.registry-generic.conf
@@ -77,11 +77,11 @@ RewriteRule "^/index/static$" /index/flatpak-testing-%1-annotations.json [L,PT]
 
 RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
-RewriteRule "^/index/static$" /index/flatpak-%1.json [L,PT]
+RewriteRule "^/index/static$" /index/flatpak-latest-%1.json [L,PT]
 
 RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
-RewriteRule "^/index/static$" /index/flatpak-%1-annotations.json [L,PT]
+RewriteRule "^/index/static$" /index/flatpak-latest-%1-annotations.json [L,PT]
 
 RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &tag=testing
@@ -92,10 +92,10 @@ RewriteCond "&%{QUERY_STRING}" &tag=testing
 RewriteRule "^/index/static$" /index/flatpak-testing-annotations.json [L,PT]
 
 RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
-RewriteRule "^/index/static$" /index/flatpak.json [L,PT]
+RewriteRule "^/index/static$" /index/flatpak-latest.json [L,PT]
 
 RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
-RewriteRule "^/index/static$" /index/flatpak-annotations.json [L,PT]
+RewriteRule "^/index/static$" /index/flatpak-latest-annotations.json [L,PT]
 {% endif %}
 
 DocumentRoot /srv/web/registry-index/
