Added bodhi-web servicemonitor to work with the prometheus operator in application-monitoring.

--- a/playbooks/openshift-apps/bodhi.yml
+++ b/playbooks/openshift-apps/bodhi.yml
@@ -108,6 +108,11 @@
     app: bodhi
     file: service.yml
     objectname: service.yml
+  - role: openshift/object
+    app: bodhi
+    file: servicemonitor.yml
+    objectname: servicemonitor.yml
+    when: env != "production"
   - role: openshift/route
     app: bodhi
     routename: bodhi-web
