--- a/playbooks/openshift-apps/application-monitoring.yml
+++ b/playbooks/openshift-apps/application-monitoring.yml
@@ -55,6 +55,9 @@
     command: oc -n application-monitoring apply -f /etc/openshift_apps/application-monitoring/grafana-operator/deploy/crds/GrafanaDataSource.yaml
 
   - name: Prometheus CRDs - monitoring.coreos.com_podmonitors.yaml
+    command: oc -n application-monitoring apply -f /etc/openshift_apps/application-monitoring/prometheus-operator/example/rbac/prometheus-operator-crd/prometheus-operator-cluster-roles.yaml
+
+  - name: Prometheus CRDs - monitoring.coreos.com_podmonitors.yaml
     command: oc -n application-monitoring apply -f /etc/openshift_apps/application-monitoring/prometheus-operator/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
 
   - name: Prometheus CRDs - monitoring.coreos.com_prometheuses.yaml
