--- a/playbooks/groups/copr-db.yml
+++ b/playbooks/groups/copr-db.yml
@@ -16,6 +16,12 @@
   pre_tasks:
   - include_vars: dir=/srv/web/infra/ansible/vars/all/ ignore_files=README
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
+  - name: install langpacks
+    dnf:
+      name:
+        - langpacks-en
+        - glibc-all-langpacks
+    state: latest
 
   roles:
   - base
