--- a/playbooks/openshift-apps/debuginfod.yml
+++ b/playbooks/openshift-apps/debuginfod.yml
@@ -1,5 +1,5 @@
 - name: make the app be real
-  hosts: os_masters_stg[0]:os_masters[0]
+  hosts: os_masters_stg[0]
   user: root
   gather_facts: False
 
@@ -15,6 +15,7 @@
     appowners:
     - fche
     - amerey
+    - pingou
     tags:
     - apply-appowners
            
