--- a/roles/zabbix/zabbix-agent/vars/Fedora.yml
+++ b/roles/zabbix/zabbix-agent/vars/Fedora.yml
@@ -4,5 +4,6 @@ pkgs_list:
 zabbix_pkgs_list:
   - zabbix-agent
   - zabbix # provides zabbix_sender
+  - zabbix-selinux
   - bc
   - ncurses-compat-libs  # Needed for some megacli tools and raid monitoring checks through zabbix_sender
