--- a/roles/zabbix/zabbix-agent/tasks/main.yml
+++ b/roles/zabbix/zabbix-agent/tasks/main.yml
@@ -41,7 +41,7 @@
 - name: Configuring Zabbix agentd
   template:
     src: zabbix_agentd.conf.j2
-    dest: /etc/zabbix/zabbix_agentd.conf
+    dest: "{{ zabbix_agentd }}"
   notify: restart_zabbix_agent
 
 - name: Ensuring we have a directory to put zabbix scripts
@@ -55,7 +55,7 @@
 - name: Adding some other conf files under zabbix_agentd.d
   template:
     src: "{{ item }}.j2"
-    dest: "/etc/zabbix/zabbix_agentd.d/{{ item }}"
+    dest: "{{ zabbix_agentd_dir }}/{{ item }}"
     owner: zabbix
     mode: 0666
   notify: restart_zabbix_agent
