Changed zabbix agent roles after some troubleshooting.

--- a/roles/zabbix/zabbix-agent/tasks/main.yml
+++ b/roles/zabbix/zabbix-agent/tasks/main.yml
@@ -38,6 +38,11 @@
     state: yes
   when: ansible_selinux.status == "enabled"
 
+- name: Ensures config directory
+  file:
+    path: "{{ zabbix_agentd_dir }}"
+    state: directory
+
 - name: Configuring Zabbix agentd
   template:
     src: zabbix_agentd.conf.j2
