--- a/roles/zabbix/zabbix-agent/vars/Fedora.yml
+++ b/roles/zabbix/zabbix-agent/vars/Fedora.yml
@@ -8,6 +8,6 @@ zabbix_pkgs_list:
   - bc
   - ncurses-compat-libs  # Needed for some megacli tools and raid monitoring checks through zabbix_sender
 
-zabbix_agentd: /etc/zabbix_agentd.conf
+zabbix_agentd: /etc/zabbix/zabbix_agentd.conf
 
-zabbix_agentd_dir: /etc/zabbix/
+zabbix_agentd_dir: /etc/zabbix/zabbix_agentd.d
