There was wrong namespace in the application-monitoring project

--- a/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus/prometheus.yaml
+++ b/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus/prometheus.yaml
@@ -12,6 +12,6 @@ spec:
       team: frontend
   alerting:
     alertmanagers:
-    - namespace: default
+    - namespace: application-monitoring
       name: alertmanager
       port: web
