Prometheus operator user was too low.

--- a/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus-operator/prometheus-operator-deployment.yaml
+++ b/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus-operator/prometheus-operator-deployment.yaml
@@ -44,5 +44,5 @@ spec:
         beta.kubernetes.io/os: linux
       securityContext:
         runAsNonRoot: true
-        runAsUser: 65534
+        runAsUser: 1000365534
       serviceAccountName: prometheus-operator
