--- a/playbooks/groups/copr-frontend-cloud.yml
+++ b/playbooks/groups/copr-frontend-cloud.yml
@@ -48,7 +48,7 @@
 
   roles:
    - base
-   - { role: fas_client, when: devel|bool }
+   - { role: fas_client, when: env != "staging" }
    - { role: sudo, sudoers: "{{ private }}/files/sudo/copr-sudoers", when: devel|bool }
    - copr/copr-devel-server
    - copr/frontend-cloud
