--- a/roles/openshift-apps/bodhi/files/servicemonitor.yml
+++ b/roles/openshift-apps/bodhi/files/servicemonitor.yml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    monitoring-key: 'middleware'
+    monitoring-key: 'cpe'
   name: bodhi-web
 spec:
   endpoints:
