zabbix: create a keytab we can use to authenticate
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/groups/zabbix.yml
+++ b/playbooks/groups/zabbix.yml
@@ -16,6 +16,18 @@
   - hosts
   - { role: fas_client, when: env != "staging" }
   - { role: ipa/client, when: env == "staging" }
+  - role: keytab/service
+    owner_user: apache
+    owner_group: apache
+    service: HTTP
+    host: "zabbix{{env_suffix}}.fedoraproject.org"
+    when: datacenter == 'iad2'
+  - role: keytab/service
+    owner_user: apache
+    owner_group: apache
+    service: HTTP
+    host: "zabbix-external{{env_suffix}}.fedoraproject.org"
+    when: datacenter != 'iad2'
   - collectd/base
   - apache
   - sudo
