--- a/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus/prometheus.yaml
+++ b/roles/openshift-apps/application-monitoring/files/prometheus-operator/example/rbac/prometheus/prometheus.yaml
@@ -13,6 +13,12 @@ spec:
   serviceMonitorSelector:
     matchLabels:
       monitoring-key: cpe
+  podMonitorNamespaceSelector:
+    matchLabels:
+      monitoring-key: cpe
+  podMonitorSelector:
+    matchLabels:
+      monitoring-key: cpe
   alerting:
     alertmanagers:
     - namespace: application-monitoring
