--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -484,3 +484,14 @@ backend fedmsg-raw-zmq-inbound-backend
     timeout server 86400000
     timeout connect 86400000
     server  busgateway01 busgateway01:9941 weight 1 maxconn 16384
+
+{% if env == "staging" %}
+frontend zabbix-frontend
+    bind 0.0.0.0:10068
+    default_backend zabbix-backend
+
+backend zabbix-backend
+    balance hdr(appserver)
+    server  zabbix01 zabbix01:80 check inter 10s rise 1 fall 2
+    option  httpchk GET /zabbix/
+{% endif %}
