Added the correct monitoring-key label to bodhi-web.

--- a/roles/openshift-apps/bodhi/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/bodhi/templates/deploymentconfig.yml
@@ -54,6 +54,7 @@ items:
         labels:
           app: bodhi-web
           deploymentconfig: bodhi-web
+          monitoring-key: cpe
       spec:
         containers:
         - name: bodhi-web
